src/test/06-Errors/error-class-auto-m.txt
error-class-auto-m.ck:27:10: error: cannot use 'auto' type for top-level class variables...
[27]     7 => auto m_var;
              ^
